去除微信小程序使用的相关内容；根据alibaba扫描部分代码修改